# misc

chat-server-client/: User Guide.txt  chat_client.py
chat-server-client/server/: CMakeLists.txt
chat-server-client/server/include/: client.h  epoll.h  logger.h  queue.hpp  server.h  socket.h
chat-server-client/server/src/: client.cpp  epoll.cpp  logger.cpp  main.cpp  server.cpp  socket.cpp
xmltv-parser/: xmltv_parser.py
